crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__override_defaults.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
ICN001 `altair` should be imported as `alt`
 --> override_default.py:3:8
  |
1 | import math  # not checked
2 |
3 | import altair  # unconventional
  |        ^^^^^^
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
help: Alias `altair` to `alt`

ICN001 `matplotlib.pyplot` should be imported as `plt`
 --> override_default.py:4:8
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^
5 | import numpy  # unconventional
6 | import pandas  # unconventional
help: Alias `matplotlib.pyplot` to `plt`

ICN001 `numpy` should be imported as `nmp`
 --> override_default.py:5:8
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |        ^^^^^
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
help: Alias `numpy` to `nmp`

ICN001 `pandas` should be imported as `pd`
 --> override_default.py:6:8
  |
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |        ^^^^^^
7 | import seaborn  # unconventional
help: Alias `pandas` to `pd`

ICN001 `seaborn` should be imported as `sns`
 --> override_default.py:7:8
  |
5 | import numpy  # unconventional
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |        ^^^^^^^
8 |
9 | import altair as altr  # unconventional
help: Alias `seaborn` to `sns`

ICN001 `altair` should be imported as `alt`
  --> override_default.py:9:18
 7 | import seaborn  # unconventional
 8 |
 9 | import altair as altr  # unconventional
   |                  ^^^^
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
help: Alias `altair` to `alt`

ICN001 `matplotlib.pyplot` should be imported as `plt`
  --> override_default.py:10:29
   |
 9 | import altair as altr  # unconventional
10 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
help: Alias `matplotlib.pyplot` to `plt`

ICN001 `numpy` should be imported as `nmp`
  --> override_default.py:11:17
   |
 9 | import altair as altr  # unconventional
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
   |                 ^^
12 | import pandas as pdas  # unconventional
13 | import seaborn as sbrn  # unconventional
help: Alias `numpy` to `nmp`

ICN001 `pandas` should be imported as `pd`
  --> override_default.py:12:18
   |
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
   |                  ^^^^
13 | import seaborn as sbrn  # unconventional
help: Alias `pandas` to `pd`

ICN001 `seaborn` should be imported as `sns`
  --> override_default.py:13:19
   |
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
13 | import seaborn as sbrn  # unconventional
   |                   ^^^^
14 |
15 | import altair as alt  # conventional
help: Alias `seaborn` to `sns`
